experience tab done

--- a/index.html
+++ b/index.html
@@ -71,15 +71,12 @@
                   <li class="active"><a href="#experience">experience <span class="sr-only">(current)</span></a></li>
                   <li><a href="#education">education</a></li>
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
+                      <li><a href="http://shekharrajak.github.io/gsoc_2017_posts/">SciRuby</a></li>
+                      <li><a href="http://shekharrajak.github.io/gsoc_2016_posts/">SymPy</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">One more separated link</a></li>
+                      <li><a href="http://s-hacker.info/">s-hacker.info</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -113,30 +110,31 @@
               </li>
               <li><a href="#3b" data-toggle="tab">Bundle</a>
               </li>
-              <li><a href="#4a" data-toggle="tab">Github</a>
+              <li><a href="#4b" data-toggle="tab">Github</a>
               </li>
         </ul>
 
               <div class="tab-content clearfix">
                 <div class="tab-pane active" id="1b">
-                  <div class="overlay_container">
-                        <img src="img/daru.png" alt="SciRuby" class="image">
-                        <a href="https://github.com/sciruby/daru">
-                          <div class="overlay">
-                            <div class="text">SciRuby/Daru</div>
-                          </div>
-                        </a>
-                      </div>
-                  <b>Same as example 1 but we have now styled the tab's corner</b>
+                  <b>Core developer in SciRuby</b>
+                  <p>  My most of the works are for daru and daru-view gem.</p>
+                  <h4><a href="http://shekharrajak.github.io/gsoc_2017_posts/"> <abbr title="Google Summer of Code">GSoC 2017 Report</abbr></a></h4>
+
                 </div>
                 <div class="tab-pane" id="2b">
-                  <b>We use the class nav-pills instead of nav-tabs which automatically creates a background color for the tab</b>
+                  <b>Core developer in SymPy</b>
+                  <p>  My most of the works are for Set, Solvers, Solveset.</p>
+                  <h4><a href="http://shekharrajak.github.io/gsoc_2016_posts/"> <abbr title="Google Summer of Code">GSoC 2016 Report</abbr></a></h4>
                 </div>
                 <div class="tab-pane" id="3b">
-                  <b>We applied clearfix to the tab-content to rid of the gap between the tab and the content</b>
+                  <b>Contributor</b>
+                  <p> I have 4 PRs merged in Bundler/bundler github repo</p>
                 </div>
                   <div class="tab-pane" id="4b">
-                  <b>We use css to change the background color of the content to be equal to the tab</b>
+                  <p> My all project can be found in my github profile:</p>
+                  <p>
+                  <a href="https://github.com/shekharrajak">@shekharrajak</a>
+                  </p>
                 </div>
               </div>
           </div>
@@ -144,64 +142,8 @@
     </section>
 
     <section id="education">
-      
+      <h3> Experience </h3>
     </section>
-<!--     <main class="container">
-        <section class="row">
-          <div class=" section_css" id="experience">
-            
-              <h3> Experience </h3>
-              <h4>Open Source Contribution:</h6>
-              <div class="row">
-                <article>
-                  <div class="col-md-4">
-                      <div class="overlay_container">
-                        <img src="img/daru.png" alt="SciRuby" class="image">
-                        <a href="https://github.com/sciruby/daru">
-                          <div class="overlay">
-                            <div class="text">SciRuby/Daru</div>
-                          </div>
-                        </a>
-                      </div>
-                        <h4><a href="http://shekharrajak.github.io/gsoc_2016_posts/"> <abbr title="Google Summer of Code">GSoC 2016 Report</abbr></a></h4>
-                  </div>
-                </article>
-
-                <article>
-                  <div class="col-md-4">
-                    <div class="overlay_container">
-                        <img src="img/sympy.png" alt="SymPy" class="image">
-                        <a href="https://github.com/sympy/sympy">
-                        <div class="overlay">
-                          <div class="text">SymPy</div>
-                        </div>
-                        </a>
-                    </div>
-
-                      <h4>
-                        <a href="http://shekharrajak.github.io/gsoc_2017_posts/"><abbr title="Google Summer of Code">
-                          GSoC 2017 Report</abbr></a>
-                      </h4>
-
-                  </div>
-                </article>
-
-                <article>
-                  <div class="col-md-4">
-                    <div class="overlay_container">
-                        <img src="img/bundler.png" alt="bundler" class="image">
-                        <a href="https://github.com/bundler/bundler">
-                        <div class="overlay">
-                          <div class="text">Bundler</div>
-                        </div>
-                        </a>
-                    </div>
-                  </div>
-                </article>
-              </div>
-              <p style="text-align: center;">My all the projects & work present in github : <a href="https://github.com/shekharrajak">@shekharrajak</a></p>
-          </div>
-        </section>
 
         <!-- personal experience
         <section class="row">
@@ -279,7 +221,7 @@
               </div>
             </footer>
           </div>
-        </section>  -->
+        </section> -->
     </main>
   </body>
 
