--- a/index.html
+++ b/index.html
@@ -21,34 +21,8 @@
     <link rel="shortcut icon" href="img/spr.png">
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
   </head>
-
-  <style type="text/css" media="screen">
-    .navbar {
-            z-index: 1;
-            background-color: transparent;
-    }
-    .top-nav-collapse {
-            background-color: #4285F4;
-    }
-    @media only screen and (max-width: 768px) {
-    .navbar {
-                background-color: #4285F4;
-            }
-    }
-    * { margin:0; padding:0; box-sizing:border-box; }
-
-    #experience_tab .nav-pills > li > a {
-      border-radius: 4px 4px 0 0 ;
-    }
-
-    #experience_tab .tab-content {
-      color : white;
-      background-color: #428bca;
-      padding : 5px 15px;
-    }
-         
-  </style>
   <body>
     <header>
               <!--Main Navigation-->
@@ -62,14 +36,14 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Brand</a>
+                <a class="navbar-brand" href="#link_cover">Portfolio [Shekhar Prasad Rajak] </a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="#experience">experience <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#education">education</a></li>
+                  <li class="active"><a href="#link_experience">experience <span class="sr-only">(current)</span></a></li>
+                  <li><a href="#link_education">education</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -89,16 +63,20 @@
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
-      <div class="container-fluid no-padding">
-        <div class="row">
-          <div class="col-md-12">
-            <img src="img/background.jpg" alt="placeholder 960" class="img-responsive" />
-          </div>
-        </div>
-      </div>
+
     </header>
 
-    <section id="experience">
+    <section id="link_cover">
+            <div id="cover">
+              <div id="intro">
+                <p>Hello World!</p>
+                <p>My name is <b>Shekhar&nbsp; Prasad Rajak </b></p>
+                <p>I’m a Web Developer and Software Engineer from India. I am tremendously passionate about the future of web design and development. I love playing Chess, visiting new places and also have interest in spirituality and ancient india.</p>
+              </div>
+            </div>
+    </section>
+
+    <section id="link_experience">
       <h3> Experience </h3>
       <h4>Open Source Contribution:</h4>
         <div id="experience_tab" class="container"> 
@@ -141,7 +119,7 @@
         </div>
     </section>
 
-    <section id="education">
+    <section id="link_education">
       <h3> Experience </h3>
     </section>
 
@@ -223,6 +201,29 @@
           </div>
         </section> -->
     </main>
+
+    <!-- write script to toggle class on scroll -->
+    <script>
+    // $(window).scroll(function() {
+    //     if ($(this).scrollTop() > 1){  
+    //         $('#name').addClass("navbar navbar-top");
+    //     }
+    //     else{
+    //         $('#name').addClass("hide");
+    //     }
+    // });
+
+      $('a[href^="#link"]').on('click', function(event) {
+          var target = $(this.getAttribute('href'));
+          if( target.length ) {
+              event.preventDefault();
+              $('html, body').stop().animate({
+                  scrollTop: target.offset().top
+              }, 1000);
+          }
+      });
+
+    </script>
   </body>
 
 </html>
