--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                     <input type="text" class="form-control" placeholder="Search">
                   </div>
                   <button type="submit" class="btn btn-default">Submit</button>
+                  <i class="fa fa-heart"  data-toggle="tooltip" data-placement="top" title="Designed by Shekhar"></i>
                 </form>
+               
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
@@ -76,7 +78,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Feel free to contact me <i class="fa fa-smile-o" aria-hidden="true"></i> </h4>
+                  <h4 class="modal-title">Feel free to contact me  <i class="fa fa-smile-o" aria-hidden="true"></i> </h4>
                 </div>
                 <div class="modal-body">
                     <div class=" footer_css"  id="socialicons">
@@ -87,9 +89,10 @@
                     <a class="icon" href="#" title="Follow with Google Plus" target="_blank"><i class="fa fa-google-plus"></i></a>
                     <a class="icon" href="#" title="Follow with RSS" target="_blank"><i class="fa fa-rss"></i></a>
                     <a class="icon" href="mailto:shekharrajak@live.com" title="Email Me" target="_blank"><i class="fa fa-envelope"></i></a>
-                    <br><br>
-                    <a class="icon" href="#" title="Copyright" target="_blank"><i class="fa fa-copyright"></i></a>
-                      Shown by <a class="icon" style="border-style: none;" href="#" title="Love" target="_blank"><i class="fa fa-heart"></i></a> Shekhar
+                    <hr>
+                    <!-- map -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.031441378059!2d77.6650476498927!3d12.841244790897044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6c8f2e323653%3A0x5fe968a239007fce!2sCGI!5e0!3m2!1sen!2sin!4v1504693538074" width="400" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>                 
+                    
                   </div>
                 </div>
                 <div class="modal-footer">
