header responsive done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <input type="text" class="form-control" placeholder="Search">
                   </div>
                   <button type="submit" class="btn btn-default">Submit</button>
-                  <i class="fa fa-heart"  data-toggle="tooltip" data-placement="top" title="Designed by Shekhar"></i>
+                  <i class="fa fa-heart"  data-toggle="tooltip" data-html="true" data-placement="top" title="Designed by Shekhar "></i>
                 </form>
                
               </div><!-- /.navbar-collapse -->
@@ -106,7 +106,7 @@
 
     <section id="link_cover">
             <div id="cover">
-              <div id="intro"  class="intro-text">
+              <div id="intro"  class="align-middle intro-text">
                 <p>Hello World!</p>
                 <p>My name is <b>Shekhar&nbsp; Prasad Rajak </b></p>
                 <p>I’m a Web Developer and Software Engineer from India. I am tremendously passionate about the future of web design and development. I love playing Chess, visiting new places and also have interest in spirituality and ancient india.</p>
