--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                   <h4 class="modal-title">Feel free to contact me  <i class="fa fa-smile-o" aria-hidden="true"></i> </h4>
                 </div>
                 <div class="modal-body">
+                  <p>
+
                     <div class=" footer_css"  id="socialicons">
                     <a class="icon" href="https://github.com/shekharrajak" title="Follow " target="_blank"><i class="fa fa-github"></i></a>
                     <a class="icon" href="https://twitter.com/shekharrajak" title="Follow with Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -91,9 +93,10 @@
                     <a class="icon" href="mailto:shekharrajak@live.com" title="Email Me" target="_blank"><i class="fa fa-envelope"></i></a>
                     <hr>
                     <!-- map -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.031441378059!2d77.6650476498927!3d12.841244790897044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6c8f2e323653%3A0x5fe968a239007fce!2sCGI!5e0!3m2!1sen!2sin!4v1504693538074" width="400" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>                 
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.031441378059!2d77.6650476498927!3d12.841244790897044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6c8f2e323653%3A0x5fe968a239007fce!2sCGI!5e0!3m2!1sen!2sin!4v1504693538074" width="inherit" height="inherit" frameborder="0" allowfullscreen></iframe>                 
                     
                   </div>
+                  </p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -159,7 +162,7 @@
 
     <section id="link_education">
       <h3> Career </h3>
-
+      <p>
       <div class="span6">
         <b>Programming languages, I learnt :  </b>
         <hr>
@@ -171,11 +174,13 @@
           <a class="list-group-item list-group-item-action "> Web technologies - HTML,CSS, JS, Codeigniter(basics), Django(basics) : Learnt during college events</a>
         </div>
         <hr>
-        <p>
-                  More details:
+          <p>
+            More details:
                   <a href="http://s-hacker.info/"> My Personal website</a>
-                </p>
+          </p>
+
       </div>
+      </p>
     </section>
 
         <!-- personal experience
