--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
 
     <section id="link_education">
       <h3> Career </h3>
-      <p>
-      <div class="span6">
+      <p class="span6">
         <b>Programming languages, I learnt :  </b>
         <hr>
         <div class="list-group">
@@ -179,7 +178,6 @@
                   <a href="http://s-hacker.info/"> My Personal website</a>
           </p>
 
-      </div>
       </p>
     </section>
 
