--- a/index.html
+++ b/index.html
@@ -141,10 +141,14 @@
   </header>
   <section id="link_cover">
     <div id="cover">
-      <div id="intro" class="align-middle intro-text">
+      <div id="intro" class="intro-text">
+        <div>
         <p>Hello World!</p>
         <p>My name is <b>Shekhar&nbsp; Prasad Rajak </b></p>
-        <p>I’m a Web Developer and Software Engineer from India. I am tremendously passionate about the future of web design and development. I love playing Chess, visiting new places and also have interest in spirituality and ancient india.</p>
+        <p>I’m a Web Developer and Software Engineer from India.<br> I am tremendously passionate about the future of web design and development.<br> I love playing Chess, visiting new places and also have interest in spirituality and ancient india.</p>
+        <p>My passions lie in : </p>
+        <p>Computer Technology, Web development and designing</p>
+        </div>
       </div>
     </div>
   </section>
@@ -190,7 +194,7 @@
   </section>
   <section id="link_education">
     <h3> Career </h3>
-    <p class="span6">
+    <p>
       <b>Programming languages, I learnt :  </b>
       <hr>
       <div class="list-group">
